v1.0 - future
	+ Fixed bug with missing icons in slideshow controls

v1.0_pre1 - December 10, 2012
	+ Added Numerical Aware Comparison (numacomp) as a sorting option.
	+ Added Exif data reading on supported files through pyexiv2
	+ Added Image rotation based on Exif data (Thanks to Alexandre Chataignon
		for the patch)
	+ Added command line option to not sort images (Thanks to Paulo Benedict Ang
		for the patch)
	+ Added hebrew translation
	+ Bug: Fixing an issue where the Wrap?-dialog would hangup in slideshow mode
		when wrap mode was set to ask
	+ Bug: Fixed broken support for non-ASCII filenames
	+ Bug: Rename overwrote existing files without user confirmation (bug #18678,
		#18682)
	+ Changes: Changed how files are registered in recent docs
	+ Changes: various code updates
	+ Changes: Behaviour of slideshow mode modified
	+ Changes: Open in fullscreen only if there are images passed to mirage
	+ Changes: Should work correctly on vertical dual monitor setups. Patch by
		"dorian"
	+ Changes: The config is now stored as json
	+ Changes: middle-mouse click now toggles zoom between 1:1 and fit to window.
	+ Features: Can now browse between subfolders
	+ Features: Double-click to enter leave fullscreen
	+ Features: Copy image to clipboard

v0.9.5.2 - February 13, 2011
	+ Added ukrainian translation
	+ Bug: Screenshot did not work correctly
	+ Bug: Fixed a bug in the use of keymodifiers

v0.9.5.1 - July 23, 2010
	+ Added dutch translation
	+ Bug: Mirage showed verbose output by default
	+ Bug: Misplaced parenthesis in Open Remote Image dialog code
	+ Changes: Fixed translations again...
	
v0.9.5 - July 20, 2010
	+ Added a windows icon
	+ Added new shortcuts PgUP/PgDN for previous/next image
	+ Added option to disable the backgroundcolor in windowed mode
	+ Bug: & in custom actions caused an error when mirage tried to open custom
		action dialog (bug #17329)
	+ Bug: Save image didn't work. (bug #17330)